      Resolves bug 444.  [Bugfix on 0.1.2.x]

  o Minor bugfixes (versioning):
    - Stop under-counting the number of authorities that recommend each
      version. [Bugfix on 0.1.2.x]

  o Minor bugfixes (guard nodes):
    - If there's a never-before-connected-to guard node in our list,
      never choose any guards past it. This way we don't expand our
      guard list unless we need to. [Bugfix in 0.1.2.x]

  o Security fixes (BSD natd support):
    - Fix a possible buffer overrun when using BSD natd support.  Bug found
      by croup.


Changes in version 0.2.0.2-alpha - 2007-06-02
  o Major bugfixes on 0.2.0.1-alpha:
    - Fix an assertion failure related to servers without extra-info digests.
      Resolves bugs 441 and 442.

  o Minor features (directory):
    - Support "If-Modified-Since" when answering HTTP requests for
      directories, running-routers documents, and network-status documents.
      (There's no need to support it for router descriptors, since those
      are downloaded by descriptor digest.)

  o Minor build issues:
    - Clear up some MIPSPro compiler warnings.
    - When building from a tarball on a machine that happens to have SVK
      installed, report the micro-revision as whatever version existed
      in the tarball, not as "x".


Changes in version 0.2.0.1-alpha - 2007-06-01
  o Major features, server usability:
    - New config options RelayBandwidthRate and RelayBandwidthBurst:
      a separate set of token buckets for relayed traffic. Right now
      relayed traffic is defined as answers to directory requests, and
      OR connections that don't have any local circuits on them.

  o Major features, client usability:
    - A client-side DNS proxy feature to replace the need for
      dns-proxy-tor: Just set "DNSPort 9999", and Tor will now listen
      for DNS requests on port 9999, use the Tor network to resolve them
      anonymously, and send the reply back like a regular DNS server.