@@ -70,11 +70,14 @@ Changes in version 0.2.0.3-alpha - 2007-??-??
   o Minor bugfixes (guard nodes):
     - If there's a never-before-connected-to guard node in our list,
       never choose any guards past it. This way we don't expand our
-      guard list unless we need to. [Bugfix in 0.1.2.x]
+      guard list unless we need to. [Bugfix on 0.1.2.x]
 
   o Security fixes (BSD natd support):
-    - Fix a possible buffer overrun when using BSD natd support.  Bug found
+    - Fix a possible buffer overrun when using BSD natd support. Bug found
       by croup.
+    - When sending destroy cells from a circuit's origin, don't include
+      the reason for tearing down the circuit. The spec says we didn't,
+      and now we actually don't. Reported by lodger. [Bugfix on 0.1.2.x]
 
 
 Changes in version 0.2.0.2-alpha - 2007-06-02
